# DecisionTreeCompiler

./: .gitignore  .gitmodules  CMakeLists.txt  CompiledResolver.cpp  CompiledResolver.h  DataSet.cpp  DataSet.h  DecisionTree.h  LegacyDecisionTree.h  OrcJitUtils.h  README.md  RegularResolver.h  SimpleObjectCache.h  SimpleOrcJit.h  Utils.h  main.cpp  main_benchmark.cpp  main_static.cpp  main_test.cpp
benchmark/: BenchmarkInterpreter.h  BenchmarkMixedCodegen.h  BenchmarkSingleCodegen.h  Shared.h
codegen/: CGBase.h  CGConditionVectorEmitter.cpp  CGConditionVectorEmitter.h  CGConditionVectorVariationsBuilder.cpp  CGConditionVectorVariationsBuilder.h  CGEvaluationPath.h  CGEvaluationPathsBuilder.cpp  CGEvaluationPathsBuilder.h  CGL1IfThenElse.h  CGL2NestedSwitches.h  CGL3NestedSwitchesAVX.cpp  CGL3NestedSwitchesAVX.h  CodeGenerator.h  CodeGeneratorSelector.cpp  CodeGeneratorSelector.h  L1IfThenElse.cpp  L1IfThenElse.h  L3SubtreeSwitchAVX.cpp  L3SubtreeSwitchAVX.h  LXSubtreeSwitch.cpp  LXSubtreeSwitch.h
codegen/utility/: CGConditionVectorEmitter.cpp  CGConditionVectorEmitter.h  CGConditionVectorVariationsBuilder.cpp  CGConditionVectorVariationsBuilder.h  CGEvaluationPath.h  CGEvaluationPathsBuilder.cpp  CGEvaluationPathsBuilder.h  CGNodeInfo.h
compiler/: CompilerSession.cpp  CompilerSession.h  DecisionTreeCompiler.cpp  DecisionTreeCompiler.h  SimpleOrcJit.cpp  SimpleOrcJit.h
data/: DataSetFactory.h  DecisionSubtreeRef.h  DecisionTree.cpp  DecisionTree.h  DecisionTreeNode.cpp  DecisionTreeNode.h
docs/: 2016-09-benchmarks-a8b55ac0-5-features.odc  2016-09-benchmarks-a8b55ac0.txt
driver/: JitDriver.h  StaticDriver.h
driver/utility/: AutoSetUpTearDownLLVM.cpp  AutoSetUpTearDownLLVM.h  Interpreter.h
resolver/: CompilerSession.cpp  CompilerSession.h  DecisionTree.cpp  DecisionTree.h  DecisionTreeCompiler.cpp  Driver.cpp  Driver.h
samples/2016-06-20_switch_tests/: _td16_dsf100.txt
test/: TestCGConditionVectorVariationsBuilder.h  TestCGEvaluationPath.h  TestCGEvaluationPathsBuilder.h  TestCodegenL1.h  TestDecisionTree.h  TestMixedCodegenL2.h  TestMixedCodegenL3.h  TestMixedCodegenL4.h  TestMixedCodegenL5.h  TestSingleCodegenL1.h  TestSingleCodegenL2.h  TestSingleCodegenL3.h  TestSingleCodegenL4.h  TestSingleCodegenL6.h
